--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "elegant-swartz-2ea0cd.netlify.com"
+baseurl = "https://elastic-mclean-69a2fa.netlify.com/"
 title = "Craig Whippo" 
 copyright = "&copy; 2018 Craig Whippo"
 theme = "hugo-academic"
