--- a/config.toml
+++ b/config.toml
@@ -32,7 +32,7 @@ defaultContentLanguageInSubdir = false
   phone = ""
   skype = ""
   telegram = ""
-  twitter = ""
+  twitter = "craig_whippo"
   github = "craigwhippo"
 
   # Enable Keybase in Contact section by entering your keybase.io username.
